# awrs

./: .gitignore  Cargo.toml  ISSUES.md  README.md  TODO.md
.cargo/: config.toml
assets/csv/: unit_attrs.csv  unit_tags.csv  weapon_attrs.csv  weapon_bonuses.csv
assets/spritesheets/: baneling_idle.xcf  command_centre.xcf  creep.xcf  custom_units.xcf  hatchery.xcf  infantry_idle.xcf  marine_idle.xcf  roach_idle.xcf  spritesheet_data.unitsprite.ron  tank_idle.xcf  unitSprites.xcf  zergling_idle.xcf
assets/spritesheets/gimp/: hydra.xcf  tank.xcf  unitSprites.xcf  zergling.xcf
assets/units/: anti_air.ron  apc.ron  artillery.ron  b_copter.ron  b_ship.ron  baneling.unit.ron  bomber.ron  cruiser.ron  fighter.ron  infantry.ron  infantry.unit.ron  lander.ron  md_tank.ron  mech.ron  missiles.ron  neotank.ron  recon.ron  roach.unit.ron  rockets.ron  sub.ron  t_copter.ron  tank.ron  zergling.unit.ron
crates/advance_craft_engine/: Cargo.toml
crates/advance_craft_engine/src/: lib.rs
crates/advance_craft_engine/src/dev_helpers/: mod.rs  new_scenario_map.rs  new_scenario_state.rs  run_game.rs
crates/advance_craft_engine/src/structures/: mod.rs  structures.rs
crates/advance_craft_engine/src/units/: units.rs  weapon.rs
crates/advance_craft_server/: Cargo.toml
crates/advance_craft_server/src/: lib.rs  main.rs
src/: helloWorld.rs  main.rs
src/awrs/: _cell.rs  _moveable.rs  arrows.rs  awrs.rs  cell.rs  choose_target.rs  constants.rs  cursor.rs  game.rs  interface.rs  load_assets.rs  map.rs  mod.rs  move_unit.rs  movement_plan.rs  register_inputs.rs  sprite_loading.rs  tile.rs  unit.rs  unit_loading.rs  unit_menu.rs
src/awrs/dev_helpers/: mod.rs  new_scenario_map.rs  new_scenario_state.rs  run_game.rs
src/awrs/engine/: engine.rs  inspect.rs  mod.rs
src/awrs/engine/structures/: structures.rs
src/awrs/engine/units/: mod.rs  units.rs  weapon.rs
src/awrs/plugins/: browsing.rs  client.rs  interface.rs  load_assets.rs  main_menu.rs  mod.rs  move_unit.rs  setup.rs  targeting.rs  unit_menu.rs
src/awrs/plugins/browsing/: browsing.rs  mod.rs  plugin.rs
src/awrs/plugins/client/: client.rs  everything.rs  mod.rs  plugin.rs  setup.rs
src/awrs/plugins/dev_debug/: plugin.rs
src/awrs/plugins/game_menu/: game_menu.rs  mod.rs  plugin.rs
src/awrs/plugins/idle_animation/: idle_animation.rs  mod.rs  plugin.rs
src/awrs/plugins/in_game/: browsing.rs  cursor.rs  game_menu.rs  idle_animation.rs  in_game.rs  interface.rs  mod.rs  move_unit.rs  targeting.rs  unit_menu.rs
src/awrs/plugins/interface/: interface.rs  mod.rs  plugin.rs
src/awrs/plugins/load_assets/: mod.rs  plugin.rs  sprite_loading.rs  unit_loading.rs
src/awrs/plugins/move_unit/: arrows.rs  mod.rs  movement_plan.rs  plugin.rs
src/awrs/resources/: action_event.rs  animation.rs  atlases.rs  client.rs  cursor.rs  map.rs  mod.rs  ron_data.rs  scenario.rs  start_game.rs  state.rs  tile.rs  unit.rs
(+17 files in other folders)
