[package]
name = "awrs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["bevy_dynamic_plugin", "file_watcher"] }
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
serde = "*"


[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[dependencies.bevy_kira_audio]
default-features = false
# enable the features you care about
features = ["wav", "flac", "mp3", "ogg"]
version = "*"
