[package]
name = "awrs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
bevy = { version = "0.15", features = ["file_watcher"] }
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
serde = "*"
advance_craft_engine = { path = "crates/advance_craft_engine" }
advance_craft_server = { path = "crates/advance_craft_server" }
thiserror = "2.0.11"
serde_json = "1.0.138"
uuid = "1.12.1"

# ------ Platform dependent dependencies for networking ------
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tungstenite = { version = "0.26.1", features = [
  "rustls-tls-webpki-roots",
  "rustls",
] }
rustls = "0.23.21"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = [
  "WebSocket",
  "EventTarget",
  "MessageEvent",
  "BinaryType",
] }
send_wrapper = "0.6.0"
# ------------------------------------------------------------

[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[dependencies.bevy_kira_audio]
default-features = false
# enable the features you care about
features = ["wav", "flac", "mp3", "ogg"]
version = "*"
