[package]
name = "advance_craft_server"
version = "0.1.0"
edition = "2024"

[dependencies]
advance_craft_engine = { path = "../advance_craft_engine" }
tokio = { version = "1.42", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.11", features = ["serde", "v4"] }
